# eew-renderer

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  renovate.json  update.sh
.github/workflows/: ci.yml  rendering.yml  review.yml
asset-preprocessor/: Cargo.toml
asset-preprocessor/src/: lib.rs  math.rs  parse_lake_shapefile.rs  parse_shapefile.rs  parse_tsunami_shapefile.rs  parse_world_shapefile.rs
assets/: intensity_stations.json
assets/shader/: border_line.fsh  border_line.gsh  border_line.vsh  epicenter.fsh  epicenter.gsh  epicenter.vsh  intensity_icon.fsh  intensity_icon.gsh  intensity_icon.vsh  map.fsh  map.vsh  shape.fsh  shape.vsh  text.fsh  textured.fsh  textured.vsh  tsunami.fsh  tsunami.gsh  tsunami.vsh
assets/shapefile/earthquake_detailed/: README.md  earthquake_detailed_simplified.qmd
assets/shapefile/tsunami_forecast/: README.md
assets/shapefile/world/: README.md
assets/vector-tile-proto/: info.md
maps/: 20240413_0.json
renderer/: Cargo.toml  build.rs
renderer-assets/: Cargo.toml  build.rs  parse_shapefile.rs  station_codes_parser.rs
renderer-assets/src/: lib.rs
renderer-types/: Cargo.toml
renderer-types/src/: bounding_box.rs  codes.rs  coord_types.rs  lib.rs  lod.rs  size.rs  vertex.rs
renderer/src/: border_line.rs  frame_context.rs  intensity.rs  intensity_icon.rs  main.rs  model.rs  namesgenerator.rs  overlay.rs  rate_limiter.rs  rendering_context.rs  rendering_context_v0.rs  resources.rs  temporary_data.rs  vertex.rs
renderer/src/api_scheme/: api_scheme.rs  mod.rs
renderer/src/endpoint/: mod.rs  model.rs
renderer/src/protos/: mod.rs  quake_prefecture.rs  vector_tile.rs
renderer/src/web/: mod.rs  model.rs  rate_limiter.rs  versioned_type_id.rs
renderer/src/worker/: drawer_border_line.rs  drawer_epicenter.rs  drawer_intensity_icon.rs  drawer_map.rs  drawer_overlay.rs  drawer_tsunami.rs  drawer_tsunami_legends.rs  drawer_tsunami_line.rs  fonts.rs  image_buffer.rs  mod.rs  resources.rs  shader.rs  theme.rs  vertex.rs
src/: main.rs
src/api/: mod.rs
src/api/v1/: mod.rs
src/map/: mod.rs
