[package]
name = "renderer-assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
renderer-types = { path = "../renderer-types/", default-features = false }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
renderer-types = { path = "../renderer-types/", features = ["shapefile"] }
const-gen = "1.6"
shapefile = "0.6"
itertools = "0.12"
ordered-float = "4.2"
earcutr = "0.4.3"
