[package]
name = "renderer-assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
renderer-types = { path = "../renderer-types/", default-features = false }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
renderer-types = { path = "../renderer-types/", features = ["shapefile"] }
asset-preprocessor  = { path = "../asset-preprocessor/" }
const-gen = "1.6"
itertools = "0.14"
ordered-float = "5.0"
