[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-const-fn-init = "0.1.1"
axum = "0.8.0"
base65536 = "1.0.1"
bytes = "1.10.1"
clap = { version = "4.5.36", features = ["derive", "env"] }
const_soft_float = "0.1.4"
enum-map = "2.7.3"
glium = "0.36.0"
glutin-winit = "0.5.0"
hmac = "0.12.1"
image = { version = "0.25.1", default-features = false, features = ["png"] }
prost = "0.13.0"
renderer-assets = { path = "../renderer-assets/" }
renderer-types = { path = "../renderer-types/" }
sha1 = "0.10.6"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "net"] }
urlencoding = "2.1.3"
winit = "0.30.9"
chrono = "0.4.40"
chrono-tz = "0.10.3"
rusttype = { version = "0.9.3", features = ["gpu_cache"] }
strum = { version = "0.27.1", features = ["derive"] }

[build-dependencies]
prost-build = "0.13.0"

[profile.release]
opt-level = 3
debug = "line-tables-only"
strip = "debuginfo"
lto = true
