[package]
name = "renderer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
array-const-fn-init = "0.1.1"
axum = "0.8.0"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base65536 = "1.0.1"
bytes = "1.10.1"
chrono = "0.4.40"
chrono-tz = "0.10.3"
clap = { version = "4.5.36", features = ["derive", "env"] }
const_soft_float = "0.1.4"
enum-map = "2.7.3"
generic-array = "1.2.0"
glium = "0.36.0"
glutin-winit = "0.5.0"
headers = "0.4.0"
hmac = "0.12.1"
humantime = "2.2.0"
image = { version = "0.25.1", default-features = false, features = ["png"] }
moka = { version = "0.12.10", features = ["future", "sync"] }
prost = "0.13.0"
rand = "0.9.1"
renderer-assets = { path = "../renderer-assets/" }
renderer-types = { path = "../renderer-types/" }
rusttype = { version = "0.9.3", features = ["gpu_cache"] }
sha1 = "0.10.6"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
winit = "0.30.9"

justnames = { git = "https://github.com/EEWBot/justnames", tag = "v0.1.0" }
axum-client-ip = "1.0.0"

[build-dependencies]
prost-build = "0.13.5"

[profile.release]
opt-level = 3
debug = "line-tables-only"
strip = "debuginfo"
lto = true
